include/dss_capi.h

    DSS_CAPI_DLL char* Settings_Get_PriceCurve(void);
    DSS_CAPI_DLL double Settings_Get_PriceSignal(void);
    DSS_CAPI_DLL void Settings_Set_PriceCurve(char* Value);
    DSS_CAPI_DLL void Settings_Set_PriceSignal(double Value);