src/CAPI_Settings.pas


     {LegalVoltageBases is a zero-terminated array, so we have to allocate
      one more than the number of actual values}

     WITH ActiveCircuit Do
     Begin
       Reallocmem(LegalVoltageBases, Sizeof(LegalVoltageBases^[1])*(Num+1));
       j := 1;
       FOR i := (0) to (ValueCount - 1) Do
       Begin
         LegalVoltageBases^[j] := Value[i];
         Inc(j)
       End;
       LegalVoltageBases^[Num+1] := 0.0;
     End;

end;
//------------------------------------------------------------------------------
function Settings_Get_PriceCurve_AnsiString():AnsiString;inline;
begin
    IF ActiveCircuit <> NIL
    THEN Result := ActiveCircuit.PriceCurve
    ELSE Result := '';
end;

function Settings_Get_PriceCurve():PAnsiChar;cdecl;
begin
    Result := DSS_GetAsPAnsiChar(Settings_Get_PriceCurve_AnsiString());
end;
//------------------------------------------------------------------------------
function Settings_Get_PriceSignal():Double;cdecl;
begin
    IF ActiveCircuit <> NIL
    THEN Result := ActiveCircuit.Pricesignal
    ELSE Result := 0.0;

end;
//------------------------------------------------------------------------------
procedure Settings_Set_PriceCurve(const Value: PAnsiChar);cdecl;
begin
    IF ActiveCircuit <> NIL
    THEN WITH ActiveCircuit DO
               Begin
                  PriceCurve    := Value;
                  PriceCurveObj := LoadShapeClass.Find(Pricecurve);
                  IF PriceCurveObj=nil THEN
                   DoSimpleMsg('Price Curve: "' +Pricecurve+ '" not found.', 5006);
               End;
end;
//------------------------------------------------------------------------------
procedure Settings_Set_PriceSignal(Value: Double);cdecl;
begin
   IF ActiveCircuit <> NIL
    THEN ActiveCircuit.PriceSignal := Value ;
end;
//------------------------------------------------------------------------------
END.
